[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/tilemaps/TileMapWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/blocks/LevelBlock.gd" type="Script" id=2]
[ext_resource path="res://assets/Icons/Expansion/Black/1x/fightJoy_21.png" type="Texture" id=3]
[ext_resource path="res://assets/Icons/Expansion/Black/1x/fightJoy_20.png" type="Texture" id=4]

[node name="LevelBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMapWorld" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -524297, 19, 0, -524296, 19, 0, -524295, 19, 0, -524294, 19, 0, -524293, 19, 0, -524292, 19, 0, -524291, 19, 0, -524290, 19, 0, -524289, 19, 0, -589824, 19, 0, -589823, 19, 0, -589822, 19, 0, -589821, 19, 0, -589820, 19, 0, -589819, 19, 0, -589818, 19, 0, -589817, 19, 0, -589816, 19, 0, -458761, 19, 0, -458760, 19, 0, -458759, 19, 0, -458758, 19, 0, -458757, 19, 0, -458756, 19, 0, -458755, 19, 0, -458754, 19, 0, -458753, 19, 0, -524288, 19, 0, -524287, 19, 0, -524286, 19, 0, -524285, 19, 0, -524284, 19, 0, -524283, 19, 0, -524282, 19, 0, -524281, 19, 0, -524280, 19, 0, -393225, 19, 0, -393224, 19, 0, -458745, 19, 0, -458744, 19, 0, -327689, 19, 0, -327688, 19, 0, -393209, 19, 0, -393208, 19, 0, -262153, 19, 0, -262152, 19, 0, -327673, 19, 0, -327672, 19, 0, -196617, 19, 0, -196616, 19, 0, -262137, 19, 0, -262136, 19, 0, -131081, 19, 0, -131080, 19, 0, -196601, 19, 0, -196600, 19, 0, -65545, 19, 0, -65544, 19, 0, -131065, 19, 0, -131064, 19, 0, -9, 19, 0, -8, 19, 0, -65529, 19, 0, -65528, 19, 0, 65527, 19, 0, 65528, 19, 0, 7, 19, 0, 8, 19, 0, 131063, 19, 0, 131064, 19, 0, 65543, 19, 0, 65544, 19, 0, 196599, 19, 0, 196600, 19, 0, 131079, 19, 0, 131080, 19, 0, 262135, 19, 0, 262136, 19, 0, 196615, 19, 0, 196616, 19, 0, 327671, 19, 0, 327672, 19, 0, 262151, 19, 0, 262152, 19, 0, 393207, 19, 0, 393208, 19, 0, 327687, 19, 0, 327688, 19, 0, 458743, 19, 0, 458744, 19, 0, 393223, 19, 0, 393224, 19, 0, 524279, 19, 0, 524280, 19, 0, 524281, 19, 0, 524282, 19, 0, 524283, 19, 0, 524284, 19, 0, 524285, 19, 0, 524286, 19, 0, 524287, 19, 0, 458752, 19, 0, 458753, 19, 0, 458754, 19, 0, 458755, 19, 0, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 589815, 19, 0, 589816, 19, 0, 589817, 19, 0, 589818, 19, 0, 589819, 19, 0, 589820, 19, 0, 589821, 19, 0, 589822, 19, 0, 589823, 19, 0, 524288, 19, 0, 524289, 19, 0, 524290, 19, 0, 524291, 19, 0, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0 )

[node name="ButtonAntiClockWise" type="TextureButton" parent="."]
margin_left = -160.0
margin_top = -80.0
margin_right = -10.0
margin_bottom = 70.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClockWise" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = -80.0
margin_right = 158.0
margin_bottom = 70.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenRotation" type="Tween" parent="."]

[connection signal="pressed" from="ButtonAntiClockWise" to="." method="_on_ButtonAntiClockWise_pressed"]
[connection signal="pressed" from="ButtonClockWise" to="." method="_on_ButtonClockWise_pressed"]
[connection signal="tween_all_completed" from="TweenRotation" to="." method="_on_TweenRotation_tween_all_completed"]
